# pre-inspector

./: README.md  diccionario.sh  modificacion_shape.txt
data/: Android_busstops_sequences_dtpmv0.3.csv
output/v0.5/: PhoneBusBtops.csv  PhoneBusStopsSequences_dtpm.csv  PhoneGrid.csv  PhoneParameters.csv  ServerShapes.csv
preinspector/: CMakeLists.txt  main.cpp  preinspector.kdev4
preinspector/.kdev4/: preinspector.kdev4
preinspector/IO/: Chequeos.cpp  Chequeos.h  FuenteDatos.cpp  FuenteDatos.h  Parametros.cpp  Parametros.h
preinspector/IO/Tablas/: TablaGrilla.cpp  TablaGrilla.h  TablaRutas.cpp  TablaRutas.h  TablaServiciosPorParadaParaAndriod.cpp  TablaServiciosPorParadaParaAndriod.h
preinspector/IO/Visualizacion/: ColorScale.cpp  ColorScale.h  CreaKML.cpp  CreaKML.h  Visualizaciones.cpp  Visualizaciones.h
preinspector/Transporte/CargaBip/: PuntoBip.cpp  PuntoBip.h
preinspector/Transporte/Diccionarios/: DiccionarioServicios.cpp  DiccionarioServicios.h
preinspector/Transporte/Grid/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  GridProcess.cpp  GridProcess.h
preinspector/Transporte/Paraderos/: Paradero.cpp  Paradero.h  ProcesaParadas.cpp  ProcesaParadas.h  RedParadas.cpp  RedParadas.h  SecuenciaParaderos.cpp  SecuenciaParaderos.h
preinspector/Transporte/Rutas/: ProcesaRutas.cpp  ProcesaRutas.h  Ruta.cpp  Ruta.h  Rutas.cpp  Rutas.h
preinspector/Transporte/Servicios/: Servicio.cpp  Servicio.h
preinspector/Utilidades/: ConvertCoordinate.cpp  ConvertCoordinate.h  Cronometro.cpp  Cronometro.h  Geometry2.cpp  Geometry2.h  Histogram.cpp  Histogram.h  Scatter.cpp  Scatter.h  StringFunctions.cpp  StringFunctions.h  TimeStampHandler.cpp  TimeStampHandler.h  Types.h
(+15 files in other folders)
